fixed center align

--- a/extension/assets/style.css
+++ b/extension/assets/style.css
@@ -27,7 +27,7 @@ a.delete:hover {
 */
 body {
 
-
+text-align: center;
     border: 5px;
     width: 175px;
     margin: 0 50px;
